mapawynajmu.pl > visitor > listings > index > fix category overflow

--- a/src/sites/mapawynajmu-pl/app/components/listing/components/index/components/panel/components/category/styles/styles.scss
+++ b/src/sites/mapawynajmu-pl/app/components/listing/components/index/components/panel/components/category/styles/styles.scss
@@ -15,7 +15,6 @@
       cursor: default;
     }
     .tiles {
-      @extend %container;
       z-index: 9;
       position: absolute;
       top: 42px;
@@ -23,31 +22,20 @@
       height: 0;
       max-width: none;
       border: none;
+      border-radius: 4px;
+      overflow: hidden;
+      background: white;
       box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
       opacity: 0;
       transition: all 0.2s ease-in;
-      &.opened {
-        width: 480px;
-        height: 320px;
-        opacity: 1;
-      }
-      @media #{$LARGE-PHONE} {
-        padding: 8px 0;
-        &.opened {
-          width: 100%;
-          height: auto;
-          opacity: 1;
-        }
-      }
       .tile {
         position: relative;
         float: left;
         width: 240px;
         height: 64px;
         cursor: pointer;
-        &:hover {
-          background: #d6eaf8;
-        }
+        opacity: 0;
+        transition: all 0.2s ease-in;
         .icon {
           position: absolute;
           border: 1px solid lightgray;
@@ -76,6 +64,9 @@
           overflow: hidden;
           text-overflow: ellipsis;
         }
+        &:hover {
+          background: #d6eaf8;
+        }
         @media #{$LARGE-PHONE} {
           width: 100%;
           height: 48px;
@@ -85,6 +76,21 @@
           .label {
             line-height: 48px;
           }
+        }
+      }
+      &.opened {
+        width: 480px;
+        height: 320px;
+        opacity: 1;
+        .tile {
+          opacity: 1;
+        }
+      }
+      @media #{$LARGE-PHONE} {
+        padding: 8px 0;
+        &.opened {
+          width: 100%;
+          height: auto;
         }
       }
     }
